samples/_failures_safe/1761152302_2a15c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b491d4a3.c: In function ‘main’:
./samples/SAFE/__tmp_b491d4a3.c:132:28: error: ‘cols’ undeclared (first use in this function); did you mean ‘cols2’?
  132 |         int product[rows1][cols
      |                            ^~~~
      |                            cols2
./samples/SAFE/__tmp_b491d4a3.c:132:28: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_b491d4a3.c:132:32: error: expected ‘]’ at end of input
  132 |         int product[rows1][cols
      |                                ^
      |                                ]
./samples/SAFE/__tmp_b491d4a3.c:132:9: error: expected declaration or statement at end of input
  132 |         int product[rows1][cols
      |         ^~~
./samples/SAFE/__tmp_b491d4a3.c:132:9: error: expected declaration or statement at end of input
